# mulle-c-developer

./: .gitattributes  .gitignore  .touch  .travis.yml  CMakeLists.txt  CMakePackage.cmake  Dockerfile  README.md  RELEASENOTES.md  overview.dot
.github/workflows/: dockerfile-ci.yml  mulle-sde-ci.yml  semgrep.yml
.mulle/etc/project/: formula-info.sh  version-info.sh
.travis.d/: before_install  before_install.darwin  before_install_aux.darwin  script
assets/dox/: TOC.md
cola/: description.md.bud  properties.plist  usage.md.bud
mulle-project/: formula-info.sh
src/mulle-c/c/: environment  sourcetree
src/mulle-c/c-cmake/: inherit  usage
src/mulle-c/c-cmake/project/all/cmake/share/: CMakeTweaksC.cmake  CompilerDetectionC.cmake  ExecutableAux.cmake  LinkManifestC.cmake  PostFramework.cmake  PostLibrary.cmake  PostSharedLibrary.cmake  PreFiles.cmake  StandaloneC.cmake  StartupC.cmake
src/mulle-c/c-demo/demo/executable/PROJECT_SOURCE_DIR/: main.PROJECT_EXTENSION
src/mulle-c/c-developer/: inherit  usage
src/mulle-c/c/project-oneshot/all/PROJECT_SOURCE_DIR/generic/: include.h
src/mulle-c/c/project-oneshot/executable/PROJECT_SOURCE_DIR/generic/: include.h
src/mulle-c/file.c/project/all/: ONESHOT_FILENAME_NO_EXT.c  ONESHOT_FILENAME_NO_EXT.h
src/mulle-c/file.h/project/all/: ONESHOT_FILENAME_NO_EXT.h
src/mulle-c/github-actions/project/all/.github/workflows/: mulle-sde-ci.yml
src/mulle-c/travis/: inherit  usage
src/mulle-c/travis/project/all/: .travis.yml
